added test fixes to gradle