@@ -49,6 +49,17 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$ext.kotlin_version"
 }
 
+
+test {
+
+    // set heap size for the test JVM(s)
+    minHeapSize = "128m"
+    maxHeapSize = "512m"
+
+    // set JVM arguments for the test JVM(s)
+    jvmArgs '-XX:MaxPermSize=256m'
+}
+
 sourceSets {
     src {
         main {
@@ -89,6 +100,7 @@ publishing {
             }
         }
     }
+
 
 }
 
